Attempt at fixing svg logo on safari

--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -28,6 +28,11 @@
     display: flex;
 }
 
+.logo svg {
+  width: 40px;
+  height: 40px;
+}
+
 .name-stack {
     text-align: left;
 }
